k8s-files/rails-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deploy
  labels:
    app: rails-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-web-app
  template:
    metadata:
      labels:
        app: rails-web-app
    spec:
      containers:
      - name: rails-app
        image: koushikreddy24/rubyrailsapp:latest
        ports:
        - containerPort: 3000
