k8s-files/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: rails-web-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
